--- a/package.json
+++ b/package.json
@@ -75,17 +75,19 @@
     "typedoc": "^0.3.12",
     "typescript": "~1.7.3",
     "typescript-register": "^1.1.0",
-    "yargs": "^3.25.0"
+    "yargs": "^3.25.0",
+    "websocket": "^1.0.22"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.0",
     "bootstrap": "^3.3.5",
     "es6-module-loader": "^0.17.8",
     "es6-shim": "^0.33.3",
+    "nouislider": "8.2.1",
     "reflect-metadata": "^0.1.2",
+    "rx-dom": "^7.0.3",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "^0.19.4",
-    "zone.js": "0.5.10",
-    "nouislider" : "8.2.1"
+    "zone.js": "0.5.10"
   }
 }
