--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.0",
-    "bootstrap": "^3.3.5",
+    "bootstrap": "^4.0.0-alpha.2",
     "es6-module-loader": "^0.17.8",
     "es6-shim": "^0.33.3",
     "nouislider": "8.2.1",
